[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/ControllerRequester.gd" type="Script" id=1]
[ext_resource path="res://scripts/StatusRequester.gd" type="Script" id=2]
[ext_resource path="res://scripts/HeartbeatRequester.gd" type="Script" id=3]
[ext_resource path="res://scripts/PowerRequester.gd" type="Script" id=4]
[ext_resource path="res://scripts/SpeedRequester.gd" type="Script" id=5]
[ext_resource path="res://scripts/TimerRequester.gd" type="Script" id=6]
[ext_resource path="res://scripts/DifficultyRequester.gd" type="Script" id=7]

[node name="ControllerRequester" type="Node"]

script = ExtResource( 1 )

[node name="RequestTimer" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = true

[node name="StatusRequester" type="HTTPRequest" parent="." index="1"]

download_file = ""
use_threads = true
body_size_limit = -1
max_redirects = 8
script = ExtResource( 2 )

[node name="HeartbeatRequester" type="HTTPRequest" parent="." index="2"]

download_file = ""
use_threads = false
body_size_limit = -1
max_redirects = 8
script = ExtResource( 3 )

[node name="PowerRequester" type="HTTPRequest" parent="." index="3"]

download_file = ""
use_threads = false
body_size_limit = -1
max_redirects = 8
script = ExtResource( 4 )

[node name="SpeedRequester" type="HTTPRequest" parent="." index="4"]

download_file = ""
use_threads = false
body_size_limit = -1
max_redirects = 8
script = ExtResource( 5 )

[node name="TimerRequester" type="HTTPRequest" parent="." index="5"]

download_file = ""
use_threads = false
body_size_limit = -1
max_redirects = 8
script = ExtResource( 6 )

[node name="DifficultyRequester" type="HTTPRequest" parent="." index="6"]

download_file = ""
use_threads = false
body_size_limit = -1
max_redirects = 8
script = ExtResource( 7 )

[connection signal="timeout" from="RequestTimer" to="." method="_on_RequestTimer_timeout"]

[connection signal="request_completed" from="StatusRequester" to="." method="_on_StatusRequester_request_completed"]

[connection signal="request_completed" from="HeartbeatRequester" to="." method="_on_HeartbeatRequester_request_completed"]

[connection signal="request_completed" from="PowerRequester" to="." method="_on_PowerRequester_request_completed"]

[connection signal="request_completed" from="SpeedRequester" to="." method="_on_SpeedRequester_request_completed"]

[connection signal="request_completed" from="TimerRequester" to="." method="_on_TimerRequester_request_completed"]

[connection signal="request_completed" from="DifficultyRequester" to="." method="_on_DifficultyRequester_request_completed"]


